# test-cmake

./: CMakeLists.txt
include/: test.hpp
src/: test.cpp
